--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "fast-xml-parser": "^5.3.3",
     "llamaindex": "^0.12.1",
+    "multer": "^2.0.2",
     "openai": "^6.13.0",
     "pdfjs-dist": "^5.4.449"
   },
@@ -26,6 +27,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.2",
     "nodemon": "^3.1.11",
     "npm-run-all": "^4.1.5",
